Fix carousel overflow

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ img {
     height: 600px;
     padding: var(--margin);
     background-color: var(--couleur-primaire);
+    overflow: hidden;
 }
 
 #equipes>h2 {
@@ -127,7 +128,6 @@ img {
 
 .carousel {
     width: 100%;
-    /* overflow: hidden; */
 }
 
 .carousel__track {
